@@ -1,0 +1,8 @@
+pirmasis_duomen__blokas.cif
+antrasis_duomen__blokas.cif
+./tmp-cif_split_005/antrasis_duomen__blokas.cif: ##CIF_2.0
+./tmp-cif_split_005/antrasis_duomen__blokas.cif: data_antrasis_duomenų_blokas
+./tmp-cif_split_005/antrasis_duomen__blokas.cif: _journal_name_full               Žąsis
+./tmp-cif_split_005/pirmasis_duomen__blokas.cif: ##CIF_2.0
+./tmp-cif_split_005/pirmasis_duomen__blokas.cif: data_pirmasis_duomenų_blokas
+./tmp-cif_split_005/pirmasis_duomen__blokas.cif: _journal_name_full               Sąžininga
