@@ -62,7 +62,8 @@ cod-tools (unreleased)
       - adding '_space_group_name_*' to the output instead of deprecated
         '_symmetry_space_group_name_*';
     - cif_split:
-      - appending mode.
+      - appending mode;
+      - writing of Unicode symbols to resulting splitted files.
     - codcif:
       - no longer allowing '[dD]' symbols in CIF numbers;
       - requiring closing braces of CIF2 tables and lists be followed by
